# catfact-rs

./: Cargo.toml  LICENSE
src/: bin.rs  lib.rs  tests.rs
