[package]
name = "catfact"
description = "Fetches cat facts."
version = "1.0.0"
authors = ["aspen <luxx4x@protonmail.com>"]
edition = "2018"
categories = ["api-bindings"]
keywords = ["cat", "cats", "api", "catfacts", "catfact"]
license = "Zlib"
license-file = "LICENSE"
homepage = "https://github.com/luxxxxy/catfact-rs"
repository = "https://github.com/luxxxxy/catfact-rs"

[lib]
name = "catfact"
path = "src/lib.rs"

[[bin]]
name = "catfact"
path = "src/bin.rs"

[dependencies]
nanoserde = "0.1"
minreq = { version = "2.2", features = ["https"] }
unescape = "0.1"

[features]
default = ["catfact_ninja"]
catfact_ninja = []
catfact_heroku = []
